// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Person Avatar renders a person avatar 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-root PodBrowser-root"
  >
    <div
      class="PodBrowser-root PodBrowser-root"
    >
      <div
        class="PodBrowser-root PodBrowser-circle PodBrowser-avatar PodBrowser-colorDefault"
      >
        <div
          class="PodBrowser-root PodBrowser-circle PodBrowser-colorDefault"
          fallback="PodBrowser-avatar"
        >
          <svg
            aria-hidden="true"
            class="PodBrowser-root PodBrowser-fallback"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="PodBrowser-root PodBrowser-root"
    >
      <h1
        class="PodBrowser-root PodBrowser-h1"
        data-testid="profile-name-title"
      >
        Alice
      </h1>
      <p
        class="PodBrowser-root PodBrowser-body2"
        data-testid="profile-webid-title"
      >
        http://alice.example.com/alice#me
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`setupErrorComponent renders 1`] = `
<DocumentFragment>
  <div
    class="MuiAvatar-root MuiAvatar-circle avatar MuiAvatar-colorDefault"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiAvatar-fallback"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
      />
    </svg>
  </div>
</DocumentFragment>
`;
